# python-site

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CRUD.md  Makefile  README.md  db.sqlite3  manage.py  poetry.toml  pyproject.toml  steps.md
.github/: .prettierignore  .prettierrc  check_innit.py  steps.md
.github/workflows/: pr-checks.yml
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_contact_email_user_contact_phone_and_more.py  0003_remove_user_type.py  0004_alter_user_options_alter_user_bio_and_more.py  0005_remove_profile_picture.py
apps/core/: admin.py  context_processors.py  tests.py  urls.py  views.py
apps/explore/: __init__.py  admin.py  api.py  apps.py  forms.py  models.py  ratelimit_handlers.py  tests.py  urls.py  views.py
apps/explore/migrations/: 0001_initial.py  0002_remove_place_contact_email_and_more.py  0003_placereview.py  0004_favorite.py  0005_place_latitude_place_longitude.py  0006_alter_category_options_alter_place_options_and_more.py  0007_remove_review_unique_constraint.py
apps/news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py  0002_alter_news_status_alter_news_title_and_more.py  0002_alter_newscategory_icon.py  0003_merge_20251107_1607.py  0004_alter_newscategory_icon.py  0005_add_default_news_categories.py
apps/theme/static_src/: package-lock.json  postcss.config.js
apps/theme/templates/: base.html
aula_exercicios/: EXERCICIOS.md
aula_exercicios/exercicio1/: dados_pessoa.txt  dna.txt  dna_invertido.txt  espaco_substituido.txt  exercicio_1.py  resultado_aluno.txt  resultados_calculadora.txt
aula_exercicios/exercicio2/: exercicio_2.py  mudar_iniciais.txt  numero_palavras.txt
aula_exercicios/exercicio3/: comentarios.txt  exercicio_3.py  frases.txt  jogadores_times.txt  lista_a.txt  lista_b.txt  lista_unica.txt  texto.txt
claude_context/: extras.md  steps.md
claude_context/tools/: bootstrap.md  django.md  vite.md
config/: settings.py  test_runner.py  urls.py
docs/: GOOGLE_MAPS_SECURITY.md
documentacao/: LICENSE.txt  STRUCTURE.md
static/css/: main.css
static/css/components/: admin_sidebar.css  admin_topbar.css  (+2 more)
static/js/: favorites-service.js  favorites-ui.js  favorites.js  google_auth.js  landing.js  landing_map.js  login.js  place_detail.js  place_form.js  utils.js
templates/: base.html
templates/accounts/: login.html  register.html  user_delete_confirm.html  user_management.html
templates/core/: about.html  admin_dashboard.html  landing.html
templates/explore/: category_detail.html  explore.html  favorites.html  place_delete_confirm.html  place_detail.html  place_form.html  review_delete_confirm.html  review_form.html
templates/includes/: admin_navbar.html  admin_sidebar.html  admin_topbar.html  login_dropdown.html  navbar.html  remove_place_modal.html
templates/news/: news_detail.html  news_list.html
(+18 files in other folders)
