[tool.poetry]
name = "site-python"
version = "0.1.0"
description = "Django site with Poetry"
authors = ["Noell"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.7"
psycopg2-binary = "^2.9.11"
python-decouple = "^3.8"
django-tailwind = "^4.2.0"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
